Ajout de l'objet UserResource dans le retour lors de la création du User. Adaptation du Swagger et des tests en conséquence.
